<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:gravity="left|right"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="left|right"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/generatedText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/static_pickupTimeText"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <TextView
                android:id="@+id/pickupTime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dynamic_pickupTimeValue"
                android:textAppearance="?android:attr/textAppearanceLarge" />
        </LinearLayout>

        

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <ImageView
            android:id="@+id/pickup_icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/pickupItemType"
            android:src="@drawable/ic_menu_mh" />
            
            <TextView
                android:id="@+id/inputText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/static_answerText"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <TextView
                android:id="@+id/inputTextValue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dynamic_answerText"
                android:textAppearance="?android:attr/textAppearanceLarge" />
        </LinearLayout>


        <TableLayout
            android:id="@+id/buttonTable"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" >

            <TableRow
                android:id="@+id/tableRow123"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" >

                <Button
                    android:id="@+id/numberOne"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/one" />

                <Button
                    android:id="@+id/numberTwo"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/two" />

                <Button
                    android:id="@+id/numberThree"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/three" />
            </TableRow>

            <TableRow
                android:id="@+id/tableRow456"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" >

                <Button
                    android:id="@+id/numberFour"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/four" />

                <Button
                    android:id="@+id/numberFive"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/five" />

                <Button
                    android:id="@+id/numberSix"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/six" />
            </TableRow>

            <TableRow
                android:id="@+id/tableRow789"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" >

                <Button
                    android:id="@+id/numberSeven"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/seven" />

                <Button
                    android:id="@+id/numberEight"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/eight" />

                <Button
                    android:id="@+id/numberNine"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/nine" />
            </TableRow>

            <TableRow
                android:id="@+id/tableRowClear0Submit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" >

                <Button
                    android:id="@+id/clearButton"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/clear_numpad_button" />

                <Button
                    android:id="@+id/numberZero"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/zero" />

                <Button
                    android:id="@+id/submitButton"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/submit_numpad_button" />
            </TableRow>
        </TableLayout>
        
        <TextView
            android:id="@+id/currentTestStatus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=""
            android:textAppearance="?android:attr/textAppearanceSmall" />
    </LinearLayout>

</ScrollView>