<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >

    <LinearLayout
        android:id="@+id/linlayout_main"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <LinearLayout
            android:id="@+id/linlayout_text"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/generatedText"
                android:layout_width="0dip"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/menu_title"
                android:textAppearance="?android:attr/textAppearanceLarge" />
        </LinearLayout>
		<LinearLayout
            android:id="@+id/linlayout_select_numbers"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

        <Button
            android:id="@+id/select_numbers"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/select_numbers" />
        </LinearLayout>
        <Spinner
            android:id="@+id/spinner_pickup_type"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:prompt="@string/spinner_pickupType" />

        <Spinner
            android:id="@+id/spinner_nr_tests"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:prompt="@string/spinner_numberoftest" />

        <Spinner
            android:id="@+id/spinner_threshold"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:prompt="@string/spinner_threshold_value" />

        <Spinner
            android:id="@+id/spinner_countingUp"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:prompt="@string/spinner_countingup_value" />
        
        
		<LinearLayout
            android:id="@+id/linlayout_generatebutton"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <Button
                android:id="@+id/generateTestButton"
                android:layout_width="0dip"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/menu_generate_ql_test" />
            
        </LinearLayout>
        
		<LinearLayout
            android:id="@+id/linlayout_gotoMain"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

        <Button
            android:id="@+id/gotoMainActivity"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/back_result_button" />

        </LinearLayout>
        

    </LinearLayout>

</ScrollView>