<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >

    <LinearLayout
        android:id="@+id/linlayout_main"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >
        
		<Spinner
            android:id="@+id/spinner_scenario_time_visible"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:prompt="@string/spinner_item_visible_time_array" />
		
		<Spinner
            android:id="@+id/spinner_scenario_timeout_between_items"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:prompt="@string/spinner_timeout_to_next_spawn" />
		
		<Spinner
            android:id="@+id/spinner_number_of_items_to_spawn"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:prompt="@string/spinner_number_of_items_to_spawn" />
		
		<Spinner
            android:id="@+id/spinner_number_of_scenarios"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:prompt="@string/spinner_number_of_scenarios" />
		
		<LinearLayout
            android:id="@+id/linlayout_generatescenariobutton"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >
            
        <Button
            android:id="@+id/gotoScenarioButton"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/generate_scenario_test" />

        </LinearLayout>
        
		<LinearLayout
            android:id="@+id/linlayout_gotoMain"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

        <Button
            android:id="@+id/gotoMainActivity"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/back_result_button" />

        </LinearLayout>
    </LinearLayout>

</ScrollView>