<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >

    <LinearLayout
        android:id="@+id/linlayout_main"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >
        
		<LinearLayout
            android:id="@+id/linlayout_goto_timer_activity"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <Button
                android:id="@+id/gotoTimerActivity"
                android:layout_width="0dip"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/goto_timer_activity" />
        </LinearLayout>
		
		<LinearLayout
            android:id="@+id/linlayout_goto_scenario_activity"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <Button
                android:id="@+id/gotoScenarioActivity"
                android:layout_width="0dip"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/goto_scenario_activity" />
        </LinearLayout>
        
		<LinearLayout
            android:id="@+id/help_and_info"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <Button
                android:id="@+id/gotoHelpActivity"
                android:layout_width="0dip"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/goto_help_activity" />
        </LinearLayout>
        
		<LinearLayout
            android:id="@+id/donate"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <Button
                android:id="@+id/gotoDonationActivity"
                android:layout_width="0dip"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/goto_donate_activity" />
        </LinearLayout>
        

    </LinearLayout>

</ScrollView>